src/test/ui/span/issue-35987.stderr
error[E0404]: expected trait, found type parameter `Add`
  --> $DIR/issue-35987.rs:15:21
   |
LL | impl<T: Clone, Add> Add for Foo<T> {
   |                     ^^^ not a trait
help: possible better candidate is found in another module, you can import it into scope
   |
LL | use std::ops::Add;
   |

error[E0601]: main function not found

error: cannot continue compilation due to previous error

You've got a few errors: E0404, E0601
If you want more information on an error, try using "rustc --explain E0404"
